# pollen3d

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_release_win.bat  conanfile.txt  dsfdsfsdCMakeLists.txtsdsdsd
_datasets/: pot_00.tif  pot_01.tif  pot_02.tif  pot_03.tif  pot_04.tif  pot_05.tif  pot_06.tif
_datasets/brassica/: README.md
app/: CMakeLists.txt  conanfile.txt  conanfile_win.txt
app/src/: app.cpp  app.h  app_opengl.cpp  main_gui.cpp  version.h
app/src/common/: app_state.cpp  app_state.h  common.cpp  common.h  imgui_custom.cpp
app/src/viewer3d/: camera_view.h  camera_view_opengl.cpp  camera_view_opengl.h  grid_opengl.cpp  pcd_view.h  pcd_view_opengl.cpp  pcd_view_opengl.h  shader_opengl.h  viewer3d.cpp  viewer3d.h  viewer3d_opengl.cpp  viewer3d_opengl.h
app/src/widgets/: heavy_task.cpp  heavy_task.h  plots.cpp  plots.h  widget.h  widget_console.cpp  widget_console.h  widget_dense_matching.cpp  widget_dense_matching.h  widget_feature_extract.cpp  widget_feature_extract.h  widget_matching.cpp  widget_matching.h
assets/: 4.1.shader.fs  4.1.shader.vs
cmake/: p3d-config.cmake  p3d-config.cmake.in
examples/: CMakeLists.txt  extract_features.cpp  reconstruction_batch.cpp  sparse_to_dense.cpp
gui/: CMakeLists.txt  conanfile.txt
gui/src/: app.cpp  main_gui.cpp
gui/src/viewer3d/: viewer3d_opengl.cpp
gui/src/widgets/: plots.cpp  widget_dense_matching.cpp  widget_feature_extract.cpp  widget_matching.cpp
lib/: CMakeLists.txt  conanfile.txt
lib/src/p3d/: command_manager.cpp  command_manager.h  commands.cpp  commands.h  core.cpp  core.h  logger.cpp  logger.h  project.cpp  project.h  project_manager.cpp  project_manager.h  serialization.cpp  serialization.h  tasks.cpp  tasks.h  utils.cpp  utils.h
lib/src/p3d/data/: affine_camera.cpp  affine_camera.h  image.cpp  image.h  image_pair.cpp  image_pair.h  point_cloud.cpp  point_cloud.h  point_cloud_container.cpp  point_cloud_container.h  project_data.cpp  project_data.h  project_settings.cpp  project_settings.h
lib/src/p3d/export/: openmvs.h
lib/src/p3d/image/: feature_extraction.cpp  feature_extraction.h
lib/src/p3d/multiview/: autocalib.cpp  autocalib.h  bundle_adjustment.cpp  bundle_adjustment.h  bundle_params.h  landmark.cpp  landmark.h
lib/src/p3d/stereo/: dense_matching.cpp  dense_matching.h  fundmat.cpp  fundmat.h  matching.cpp  matching.h  neighbor.cpp  neighbor.h  rectification.cpp  rectification.h
lib/tests/: main_tests.cpp  test_dense.h  test_diamond.h  test_fundmat.h  test_meta.h  test_misc.h  test_paths.h
src/: app.cpp  app.h  app_opengl.cpp  app_opengl.h  main_gui.cpp  pollen3d.rc
src/gui/: common.h  imgui_custom.cpp  imgui_custom.h  palette.h  plots.cpp  widget.h  widget_console.cpp  widget_console.h  widget_dense_matching.cpp  widget_feature_extract.cpp  widget_feature_extract.h  widget_matching.cpp  widget_matching.h
src/lib/p3d/: commands.h  core.h  logger.cpp  logger.h  project_manager.cpp  project_manager.h  serialization.cpp  serialization.h  utils.cpp  utils.h
src/lib/p3d/data/: affine_camera.cpp  affine_camera.h  image.cpp  image.h  image_pair.cpp  image_pair.h  point_cloud.h  point_cloud_container.cpp  point_cloud_container.h  project_data.cpp  project_data.h  project_settings.cpp  project_settings.h
src/lib/p3d/multiview/: autocalib.cpp  autocalib.h  bundle_adjustment.cpp  bundle_adjustment.h  bundle_params.h
src/lib/p3d/stereo/: dense_matching.cpp  dense_matching.h  fundmat.cpp  fundmat.h  match.cpp  match.h  matching.cpp  matching.h  rectification.h
src/p3d/: app.cpp  app.h  app_opengl.cpp  app_opengl.h  commands.cpp  commands.h  console_logger.cpp  console_logger.h  main_gui.cpp  project_manager.cpp  project_manager.h
src/p3d/core/: autocalib.cpp  autocalib.h  bundle_adjustment.cpp  bundle_adjustment.h  bundle_params.h  commands.h  core.cpp  core.h  densematcher.cpp  densematcher.h  fundmat.cpp  fundmat.h  imageproperties.cpp  imageproperties.h  logger.cpp  logger.h  matching.cpp  matching.h  project_manager.cpp  project_manager.h  rectification.cpp  rectification.h  robust_estim.hpp  serialization.cpp  serialization.h  utils.cpp  utils.h
src/p3d/core/data/: affine_camera.h  image.h  image_pair.h  project_data.cpp  project_data.h  project_settings.cpp  project_settings.h
src/p3d/core/multiview/: autocalib.h  bundle_adjustment.cpp  bundle_adjustment.h  bundle_params.h
src/p3d/core/stereo/: fundmat.cpp
src/p3d/data/: affine_camera.cpp  affine_camera.h  image.cpp  image.h  image_pair.cpp  image_pair.h  project_data.cpp  project_data.h  project_settings.cpp  project_settings.h
src/p3d/gui/: imgui_custom.cpp  imgui_custom.h  palette.h  widget_console.cpp  widget_console.h
src/p3d/viewer3d/: eyecamera.cpp  eyecamera.h  shader_opengl.h  viewer3d.h  viewer3d_opengl.cpp  viewer3d_opengl.h
src/pollen3d_gui/: CMakeLists.txt
src/pollen3d_gui/src/: app.cpp  app.h  app_opengl.cpp  main_gui.cpp
src/pollen3d_gui/src/common/: common.h
src/pollen3d_gui/src/viewer3d/: grid_opengl.h  viewer3d.cpp
src/pollen3d_gui/src/widgets/: plots.h  widget.h  widget_console.cpp  widget_dense_matching.cpp  widget_dense_matching.h  widget_feature_extract.cpp
src/pollen3d_library/: CMakeLists.txt  conanfile.txt
src/pollen3d_library/src/p3d/: commands.cpp  commands.h  project_manager.h
src/pollen3d_library/src/p3d/data/: point_cloud.cpp  point_cloud_container.cpp  project_data.h
src/pollen3d_library/src/p3d/stereo/: fundmat.cpp  fundmat.h  matching.h
src/tests/: CMakeLists.txt  conanfile.txt  test_diamond.h  test_fundmat.h  test_paths.h
src/viewer3d/: eyecamera.cpp  eyecamera.h  pcd_view.h  pcd_view_opengl.cpp  pcd_view_opengl.h  point_cloud.h  point_cloud_opengl.cpp  point_cloud_opengl.h  shader_opengl.h  viewer3d.cpp  viewer3d.h  viewer3d_opengl.cpp  viewer3d_opengl.h
tests/: CMakeLists.txt  conanfile.txt  main_tests.cpp  test_diamond.h  test_fundmat.h  test_meta.h  test_misc.h  test_paths.h
